<resources>

<!--GENERAL-->
    <string name="app_name">Kouvee Customer</string>
    <string name="information">About</string>
    <string name="product">Product</string>
    <string name="service">Service</string>

<!--ABOUT US-->
    <string name="contact_us">Contact Us</string>

    <string name="about_us">About Us Change</string>
    <string name="about_desc">Kouvee Pet Shop is a pet shop that has been established since 2018
    provides products and services in Yogyakarta. Kouvee Pet Shop
    provide a variety of products for your pet such as food, accessories,
    Equipment and others according to your pet\'s needs. Besides selling various
    kinds of products, Kouvee Pet Shop also provides services such as care and care
    animal.</string>

    <string name="motto_1">\"Caring your beloved pets.\"</string>
    <string name="motto_2">\"Treat your pets as our friend.\"</string>
    <string name="motto_3">\"Comfortable place for pets.\"</string>

    <string-array name="image_pet_shop">
        <item>@drawable/our_pet_shop_1</item>
        <item>@drawable/our_pet_shop_2</item>
        <item>@drawable/our_pet_shop_3</item>
        <item>@drawable/our_pet_shop_4</item>
        <item>@drawable/our_pet_shop_5</item>
    </string-array>

    <string name="service_check">Popular Services</string>

    <string-array name="image_service">
        <item>@drawable/bath</item>
        <item>@drawable/pedicure</item>
        <item>@drawable/animal_care</item>
        <item>@drawable/grooming</item>
    </string-array>

    <string-array name="customer_name">
        <item> - Gregorius Chrisna M - </item>
        <item> - Ninna Novila - </item>
        <item> - Albertus Bagus S - </item>
        <item> - Aldi Okta S - </item>
        <item> - Hendry Roganda - </item>
    </string-array>

    <string-array name="customer_desc">
        <item>\"The service is very satisfying, my pet happy to visit the pet shop. \nThank you Kouvee Pet Shop.\"</item>
        <item>\"So great and comfortable! My pet so happy, trusted pet shop. \nI will be back, waiting me.\"</item>
        <item>\"Kouvee has satisfying service, the price of the service is also affordable. \nThx Kouvee pet shop.\"</item>
        <item>\"The best in Yogyakarta, the service is friendly and professional, it\'s definitely a subscription here, like it !!!\"</item>
        <item>\"The service is also sophisticated, there is a notification of service status so customers don\'t need to go back. The best!\"</item>
    </string-array>

    <string-array name="customer_profile">
        <item>@drawable/greg</item>
        <item>@drawable/ninna</item>
        <item>@drawable/albert</item>
        <item>@drawable/aldi</item>
        <item>@drawable/hendry</item>
    </string-array>

    <string name="about_address">Jl. Moses Gatotkaca No. 22 \nYogyakarta 55281 \n(0274) 357735</string>
    <string name="about_web">http://www.sayanghewan.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="search">Search product</string>
    <string name="sorting">Sorting</string>
    <string name="a_z_price">A-Z Price</string>
    <string name="z_a_price">Z-A Price</string>
    <string name="a_z_stock">A-Z Stock</string>
    <string name="z_a_stock">Z-A Stock</string>
    <string name="sort_a_z">Sort A-Z</string>
    <string name="welcome">welcome</string>
    <string name="title_service">Check your service</string>
    <string name="failed_service">Sorry, service transaction not found</string>
    <string name="transaction_number">Transaction ID</string>
    <string name="pet_name">Pet Name</string>
    <string name="status">Status</string>
    <string name="total_price">Total Price</string>
    <string name="todo">TODO</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_desc">This is out pet shop..</string>
    <string name="review">Review</string>
    <string name="input_service_id">Input Transaction ID</string>
    <string name="looking_for">Looking for transaction</string>
    <string name="discount">Discount</string>
    <string name="payment">Payment</string>
    <string name="customer_service">Customer Service</string>
    <string name="cashier">Cashier</string>
    <string name="detail">Detail</string>
</resources>
