<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_rounded"
            app:queryHint="@string/input_service_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:iconifiedByDefault="false"/>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="visible"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_view">

            <ImageView
                android:id="@+id/image_first"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:alpha="0.7"
                android:src="@drawable/first_service"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/looking_for"
                android:textAlignment="center"
                android:textStyle="italic|bold"
                app:layout_constraintEnd_toEndOf="@+id/image_first"
                app:layout_constraintStart_toStartOf="@+id/image_first"
                app:layout_constraintTop_toBottomOf="@+id/image_first" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/failed_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_view">
            <ImageView
                android:id="@+id/image_failed"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/failed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/failed_service"
                android:textAlignment="center"
                android:textStyle="italic|bold"
                app:layout_constraintEnd_toEndOf="@+id/image_failed"
                app:layout_constraintStart_toStartOf="@+id/image_failed"
                app:layout_constraintTop_toBottomOf="@+id/image_failed" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/success_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:elevation="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_view">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView4"
                style="@style/TextLabelService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/id_transaction"
                style="@style/TextResultService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
                app:layout_constraintStart_toStartOf="@+id/materialTextView4"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                style="@style/TextLabelService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pet_name"
                app:layout_constraintEnd_toEndOf="@+id/id_transaction"
                app:layout_constraintStart_toStartOf="@+id/id_transaction"
                app:layout_constraintTop_toBottomOf="@+id/id_transaction"
                tools:ignore="SmallSp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pet"
                style="@style/TextResultService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView3"
                app:layout_constraintStart_toStartOf="@+id/materialTextView3"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                style="@style/TextLabelService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                app:layout_constraintEnd_toEndOf="@+id/pet"
                app:layout_constraintStart_toStartOf="@+id/pet"
                app:layout_constraintTop_toBottomOf="@+id/pet"
                tools:ignore="SmallSp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/status"
                style="@style/TextResultService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView"
                app:layout_constraintStart_toStartOf="@+id/materialTextView"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                style="@style/TextLabelService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_price"
                app:layout_constraintEnd_toEndOf="@+id/status"
                app:layout_constraintStart_toStartOf="@+id/status"
                app:layout_constraintTop_toBottomOf="@+id/status"
                tools:ignore="SmallSp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/total_price"
                style="@style/TextResultService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
                app:layout_constraintStart_toStartOf="@+id/materialTextView2"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_price"
                tools:listitem="@layout/item_detail_transaction" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>